# twgc

./: .gitignore  Makefile  README.md  compost_data_poc.ipynb  dash.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
data/: Preview_Data.csv  STAT_P_126_Metadata.csv  stat_p_126.csv  stat_p_44.csv  stat_p_45.csv
data/STAT_P_126_Resource/: hash.txt  全國一般廢棄物產生量.csv
