[tool.poetry]
name = "twgc"
version = "0.1.0"
description = "Taiwan garbage collector: data vis for waste management in Taiwan."
authors = ["frankcholula <lu.phrank@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.24.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
